; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/extr_velocikey.c_velocikey_match_speed.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/extr_velocikey.c_velocikey_match_speed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@typing_speed = common dso_local global i64 0, align 8
@TYPING_SPEED_MAX_VALUE = common dso_local global float 0.000000e+00, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @velocikey_match_speed(float %0, float %1) #0 {
  %3 = alloca float, align 4
  %4 = alloca float, align 4
  store float %0, float* %3, align 4
  store float %1, float* %4, align 4
  %5 = load float, float* %3, align 4
  %6 = load float, float* %4, align 4
  %7 = load float, float* %4, align 4
  %8 = load float, float* %3, align 4
  %9 = fsub float %7, %8
  %10 = load i64, i64* @typing_speed, align 8
  %11 = sitofp i64 %10 to float
  %12 = load float, float* @TYPING_SPEED_MAX_VALUE, align 4
  %13 = fdiv float %11, %12
  %14 = fmul float %9, %13
  %15 = fsub float %6, %14
  %16 = call float @MAX(float %5, float %15)
  ret float %16
}

declare dso_local float @MAX(float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
